--- a/ex-3/assets/styles/style.css
+++ b/ex-3/assets/styles/style.css
@@ -141,7 +141,7 @@ header {
 #benefits-spec {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     margin: 120px auto;
 
 }
