--- a/ex-3/assets/styles/style.css
+++ b/ex-3/assets/styles/style.css
@@ -13,7 +13,6 @@ header {
     background-color: #FED100;
     display: grid;
     grid-template: 5em 1fr / 1fr 1fr;
-    width: max-width;
 }
 
 .header {
@@ -30,7 +29,7 @@ header {
 
 .header-grid {
     display: grid;
-    grid-column: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .logo {
@@ -56,7 +55,7 @@ header {
 
 .menu-header {
     display: grid;
-    grid-column: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     text-align: center;
 }
 
@@ -83,7 +82,7 @@ header {
 .content-header {
     margin-left: 1em;
     display: grid;
-    grid-row: 2fr 1fr 1fr;
+    grid-template-rows: 2fr 1fr 1fr;
 }
 
 .header-text {
@@ -123,7 +122,7 @@ header {
 .advantages {
     width: 40em;
     display: grid;
-    grid-column: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 3em;
     margin: 4em 0;
 }
@@ -145,7 +144,7 @@ header {
 .advantages2 {
     grid-column: 2 / 3;
     display: grid;
-    grid-column: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .advantages2 img {
@@ -160,7 +159,7 @@ header {
 .advantages3 {
     grid-column: 3 / 4;
     display: grid;
-    grid-column: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .advantages3 img {
@@ -174,26 +173,125 @@ header {
 
 .instruction {
     display: grid;
-    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+    grid-template-areas:
+            "hd-items hd-items"
+            "one-item two-item"
+            "three-item four-item";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 9em);
+    margin-bottom: 3em;
 }
 
 .h2-instruction {
-    grid-area: 1 / 1 / 2 / 3;
-    margin: 3em auto 2em auto;
+    grid-area: hd-items;
+    font-weight: 600;
+    font-size: 2em;
+    margin: 2em auto 2em;
+}
+
+.p1, .p2, .p3, .p4 {
+    width: 40em;
 }
 
 .p1 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: one-item;
+    justify-self: end;
 }
 
 .p2 {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: two-item;
 }
 
 .p3 {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-area: three-item;
+    justify-self: end;
+}
+
+.p3 .number {
+    margin: 0.5em 0.4em 1em 0.4em
 }
 
 .p4 {
-    grid-area: 3 / 2 / 4 / 3;
+    grid-area: four-item;
+}
+
+.p4 .number {
+    margin: 0.5em 0.4em 1em 0.4em
+}
+
+.number {
+    float: left;
+    font-weight: 300;
+    font-size: 3em;
+    text-shadow: 1px 1px 0px #FED100;
+    margin: 0.5em 0.5em 1em 0.5em;
+}
+
+.h3-instruction {
+    font-weight: 500;
+    font-size: 1.5em;
+    margin: 1.3em 0 0 0.3em;
+}
+
+.text-instruction {
+    font-weight: normal;
+    width: 33em;
+    font-size: 1em;
+    margin-top: 1em;
+    line-height: 1.5em;
+}
+
+footer {
+    background-color: #FED100;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3em;
+}
+
+.first-column h2 {
+    font-weight: 600;
+    font-size: 1.8em;
+    margin: 0.5em 0 2em 0;
+}
+
+.first-column p {
+    font-size: 1em;
+    width: 15em;
+    margin-bottom: 2em;
+}
+
+.second-column li{
+    list-style-type: none;
+    margin-bottom: 1em;
+    font-weight: 500;
+    font-size: 1.2em;
+}
+
+.third-column img {
+    margin: 1em 2em 1em 0;
+}
+
+.email {
+    border-bottom: 1px solid black;
+}
+
+.fourth-column {
+    margin-top: 1em;
+    width: 14em;
+    justify-self: center;
+}
+
+.fourth-column button {
+    padding: 0.8em 2.27em;
+    background-color: #FED100;
+    border: 1px solid black;
+}
+
+.phone-footer {
+    text-align: center;
+    margin-top: 0.5em;
+}
+
+.phone-footer a {
+    border-bottom: 1px solid black;
 }
