--- a/ex-2/assets/styles/style.css
+++ b/ex-2/assets/styles/style.css
@@ -12,41 +12,45 @@ body a {
 header {
     background-color: #FED100;
     display: grid;
-    grid-template: 5em 1fr / 1fr 1fr;
+    grid-template-areas: 
+        'header header header header'
+        'content-header content-header content-header carman';
+    padding: 0 3vw;
 }
 
 .header {
-    grid-area: 1 / 1 / 2 / 3;
+    grid-area: header;
 }
 
 .content-header {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: content-header;
 }
 
-.man {
-    grid-area: 2 / 2 / 3 / 3;
+.carman {
+    grid-area: carman;
 }
 
 .header-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 
+    'logo menu-header menu-header menu-header phone';
 }
 
 .logo {
-    grid-column: 1 / 2;
-    margin: 1em;
+    grid-area: logo;
+    font-size: 2vw;
+    align-self: center;
 }
 
 .menu-header {
-    grid-column: 2 / 3;
+    grid-area: menu-header;
 }
 
 .phone {
-    grid-column: 3 / 4;
+    grid-area: phone;
     text-align: right;
     font-weight: 700;
-    font-size: 18pt;
-    margin-right: 1em;
+    font-size: 1.5vw;
 }
 
 .phone a {
@@ -57,6 +61,7 @@ header {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
+    font-size: 1.3vw;
 }
 
 .href {
@@ -98,20 +103,20 @@ header {
 }
 
 .h1-header {
-    font-size: 4.4em;
+    font-size: 4vw;
     margin: 1.3em 0 0 0;
 }
 
 .header-text h2 {
-    font-size: 1.9em;
+    font-size: 1.8vw;
     font-weight: 600;
-    margin: 0;
+    margin: 2vw 0 0 0 ;
 }
 
 .btn {
     background-color: #FF352B;
     font-family: Montserrat;
-    font-size: 1.5em;
+    font-size: 1.5vw;
     color: white;
     padding: 1em 6em;
     border: 0;
@@ -120,55 +125,92 @@ header {
 }
 
 .advantages {
-    width: 40em;
+    width: 40vw;
+    margin-top: 1vw;
+    font-size: 1.3vw;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3em;
-    margin: 4em 0;
+    grid-template-areas:
+        'advantages1 advantages2 advantages3';
+}
+
+.advantages img {
+    width: 100%;
+}
+
+.advantages div{
+    width: 90%;
 }
 
 .advantages1 {
-    grid-column: 1 / 2;
+    grid-column: advantages1;
     display: grid;
+    grid-template-areas: 
+        'img1 text1'
 }
 
 .advantages1 img {
-    grid-column: 1 / 2;
+    grid-area: img1;
 }
 
 .advantages1 p {
-    grid-column: 2 / 3;
+    grid-area: text1;
     margin: 0;
 }
 
 .advantages2 {
-    grid-column: 2 / 3;
+    grid-column: advantages2;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+        'img2 text2'
 }
 
 .advantages2 img {
-    grid-column: 1 / 2;
+    grid-area: img2;
 }
 
 .advantages2 p {
-    grid-column: 2 / 3;
+    grid-area: text2;
     margin: 0;
 }
 
 .advantages3 {
-    grid-column: 3 / 4;
+    grid-column: advantages3;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+        'img3 text3'
 }
 
 .advantages3 img {
-    grid-column: 1 / 2;
+    grid-area: img3;
 }
 
 .advantages3 p {
-    grid-column: 2 / 3;
+    grid-area: text3;
     margin: 0;
+}
+
+.carman {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: end;
+}
+
+.man {
+    grid-column: 2 / span 6;
+    grid-row: 1;
+    padding-top: 20%;
+    z-index: 1; 
+    align-self: center;
+}
+
+.man img, .car img {
+    width: 80%;
+}
+
+.car {
+    grid-column: 6 / -1;
+    grid-row: 1; 
+    align-self: center;
 }
 
 .instruction {
@@ -179,18 +221,19 @@ header {
             "three-item four-item";
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 9em);
-    margin-bottom: 3em;
+    margin-bottom: 3vw;
 }
 
 .h2-instruction {
     grid-area: hd-items;
     font-weight: 600;
-    font-size: 2em;
-    margin: 2em auto 2em;
+    font-size: 2.7vw;
+    margin: 7vh auto 7vh;
 }
 
 .p1, .p2, .p3, .p4 {
-    width: 40em;
+    width: 40vw;
+    font-size: 1vw;
 }
 
 .p1 {
@@ -222,14 +265,14 @@ header {
 .number {
     float: left;
     font-weight: 300;
-    font-size: 3em;
+    font-size: 3vw;
     text-shadow: 1px 1px 0px #FED100;
     margin: 0.5em 0.5em 1em 0.5em;
 }
 
 .h3-instruction {
     font-weight: 500;
-    font-size: 1.5em;
+    font-size: 1.5vw;
     margin: 1.3em 0 0 0.3em;
 }
 
@@ -244,54 +287,191 @@ header {
 footer {
     background-color: #FED100;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 3em;
+    grid-template-areas: 
+        'first-column second-column third-column fourth-column';
+    padding: 3vw;
+    align-self: start;
+}
+
+.first-column {
+    grid-area: first-column;
+}
+
+.second-column {
+    grid-area: second-column;
+}
+
+.third-column {
+    grid-area: third-column;
+}
+
+.fourth-column {
+    grid-area: fourth-column;
 }
 
 .first-column h2 {
     font-weight: 600;
-    font-size: 1.8em;
-    margin: 0.5em 0 2em 0;
+    font-size: 1.5vw;
+    margin: 0 0 2vw 0;
 }
 
 .first-column p {
-    font-size: 1em;
-    width: 15em;
-    margin-bottom: 2em;
+    font-size: 1vw;
+    width: 15vw;
+    margin-bottom: 2vw;
+}
+
+.second-column ul {
+    margin-top: 0;
+    padding-left: 0;
 }
 
 .second-column li{
     list-style-type: none;
     margin-bottom: 1em;
     font-weight: 500;
-    font-size: 1.2em;
+    font-size: 1.2vw;
 }
 
 .third-column img {
-    margin: 1em 2em 1em 0;
+    width: 100%;
+}
+
+.third-column div {
+    width: 1.7vw;
+    margin-right: 2vw;
+}
+
+.icon {
+    display: grid;
+    grid-template-areas: 'Youtube VK Facebook Instagram';
+}
+
+.Youtube {
+    grid-area: Youtube;
+}
+
+.VK {
+    grid-area: VK;
+}
+
+.Facebook {
+    grid-area: Facebook;
+}
+
+.Instagram {
+    grid-area: Instagram;
 }
 
 .email {
-    border-bottom: 1px solid black;
+    border-bottom: 0.1vw solid black;
+    font-size: 1vw;
 }
 
 .fourth-column {
-    margin-top: 1em;
-    width: 14em;
+    width: 14vw;
     justify-self: center;
+    justify-content: center;
 }
 
 .fourth-column button {
-    padding: 0.8em 2.27em;
+    padding: 0.8vw 2.27vw;
     background-color: #FED100;
     border: 1px solid black;
+    font-size: 0.9vw;
 }
 
 .phone-footer {
     text-align: center;
-    margin-top: 0.5em;
+    padding: 2.3vw;
+    font-size: 1vw;
 }
 
 .phone-footer a {
     border-bottom: 1px solid black;
 }
+
+
+@media screen and (max-width: 540px) {
+    body {
+        width: 100%;
+    }
+    header {
+        grid-template:
+            'header'
+            'content-header';
+        justify-content: center;
+        margin: 0;
+    }
+
+    .header-grid {
+        justify-content: center;
+    }
+    
+    .menu-header {
+        display: none;
+    }
+
+    .advantages {
+        display: none;
+    }
+
+    .phone {
+        display: none;
+    }
+
+    .content-header {
+        margin: 0;
+    }
+
+    .header-text {
+        justify-content: center;
+        text-align: center;
+    }
+
+    .button {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .carman {
+        display: none;
+    }
+
+    .car {
+        display: none;
+    }
+    .instruction {
+        grid-template: 
+            "hd-items"
+            "one-item"
+            "two-item"
+            "three-item"
+            "four-item";
+        justify-content: center;
+        margin: 0 0 7vw 0;
+    }
+    
+
+    .text-instruction {
+        width: 50vw;
+    }
+
+    footer {
+        grid-template: 
+            'first-column' 
+            'second-column'
+            'third-column' 
+            'fourth-column';
+        justify-content: center;
+        text-align: center;
+        margin: 0;
+        font-size: 2vw;
+    }
+
+    .email {
+        text-align: center;
+        margin-bottom: 3vw;
+    }
+}
+
