--- a/ex-1/assets-1/styles/style.css
+++ b/ex-1/assets-1/styles/style.css
@@ -9,41 +9,48 @@ body {
     background-color: #E1E0E1;
     font-family: KleinCondensed-Bold;
     text-align: center;
+    font-size: 2vh;
 }
 
 .body-grid {
     display: grid;
-    grid-template: 9em 1fr 8em / repeat(3, 1fr);
+    grid-template: 
+        'header header header header'
+        'main main main aside'
+        'main main main aside'
+        'footer footer footer footer';
     gap: 0;
 }
 
 .header {
-    grid-area: 1 / 1 / 2 / 4;
+    grid-area: header;
     padding: 2em 0;
 }
 
 .main {
     background-color: #FFF8E4;
-    grid-area: 2 / 1 / 3 / 3;
+    grid-area: main;
 }
 
 .aside {
     background-color: #DCECCB;
-    grid-area: 2 / 3 / 3 / 4;
+    grid-area: aside;
 }
 
 .footer {
-    grid-area: 3 / 1 / 4 / 4;
+    grid-area: footer;
 }
 
 .main-grid {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .more-grid {
     display: grid;
-    grid-template: repeat(2, 5em) / repeat(2, 1fr);
+    grid-template: 
+        'more1 more2'
+        'more3 more3';
     gap: 2em;
     margin: 2em;
 }
@@ -54,23 +61,24 @@ body {
 
 .more p {
     margin: 2em auto;
+    padding: 0 2em;
 }
 
 .more1 {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: more1;
 }
 
 .more2 {
-    grid-area: 1 / 2 / 2 / 2;
+    grid-area: more2;
 }
 
 .more3 {
-    grid-area: 2 / 1 / 3 / 3;
+    grid-area: more3;
 }
 
 .footer-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 2em;
     margin: 2em;
 }
@@ -81,20 +89,4 @@ body {
 
 .sec-foot p {
     margin: 2em auto;
-}
-
-.sec-foot1 {
-    grid-column: 1 / 2;
-}
-
-.sec-foot2 {
-    grid-column: 2 / 3;
-}
-
-.sec-foot3 {
-    grid-column: 3 / 4;
-}
-
-.sec-foot4 {
-    grid-column: 4 / 5;
 }
