--- a/ex2/assets/styles/style.scss
+++ b/ex2/assets/styles/style.scss
@@ -1,5 +1,32 @@
-html {
-    max-width: 1800px;
+body {
     margin: 0 auto;
     padding: 0;
+}
+
+.calculate {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 60%;
+}
+
+.btn {
+    margin: 2vw 4vw;
+    padding: 5vw;
+    border: 1px solid black;
+    border-radius: 30px;
+    &_img {
+        width: 7vw;
+    }
+    &_svg{
+        width: 100%;
+    }
+}
+
+.btn:hover {
+    -webkit-box-shadow: 13px 18px 47px -26px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 13px 18px 47px -26px rgba(34, 60, 80, 0.6);
+    box-shadow: 13px 18px 47px -26px rgba(34, 60, 80, 0.6);
+    border: 2px solid black;
 }
