--- a/ex-2/assets/styles/style.css
+++ b/ex-2/assets/styles/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0 auto;
   padding: 0;
   background-color: rgba(136, 178, 197, 0.24);
+  font-family: "Raleway", sans-serif;
 }
 
 main {
@@ -60,7 +61,7 @@ main {
   width: 100%;
 }
 
-.form_inputText {
+.form_choice {
   font-family: "Raleway", sans-serif;
   border: none;
   border-top-right-radius: 4px;
@@ -82,6 +83,7 @@ main {
 
 .form_btn {
   border: none;
+  border-radius: 6px;
   margin-top: 1em;
   padding: 0.5em 5.8em;
   font-family: "Staatliches", sans-serif;
@@ -92,30 +94,97 @@ main {
   background-color: rgba(236, 81, 81, 0.623);
 }
 
-input[type="checkbox"] {
+.form_msg {
+  padding: 5px 0;
+  font-size: 9pt;
+  font-weight: 700;
+  color: rgba(197, 4, 4, 0.623);
+}
+
+.form_power {
+  width: 18em;
+}
+
+.form_power_btn {
+  margin-left: 0.8em;
+  width: 6em;
+  border-radius: 4px;
+  border: none;
+}
+
+.form_range {
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.form_input_range {
+  width: 263px;
+  padding: 17px 30px;
+}
+
+#model-mazda,
+#model-peugeot,
+#model-hyundai,
+#model-kia,
+#model-toyota,
+#msg_brand,
+#msg_model,
+#msg_year,
+#msg_kpp,
+#msg_engine,
+#msg_wheel,
+#msg_power_0,
+#msg_power_2,
+#msg_power_3 {
   display: none;
 }
 
-input[type="checkbox"] {
-  margin-left: 10px;
+#msg_power_0 {
+  color: rgba(0, 0, 0, 0.623);
+  font-size: 9pt;
 }
 
-input[type="checkbox"] + label span {
-  border: 1px solid #636363;
-  font-size: 12pt;
-  display: inline-block;
-  width: 0.3em;
-  height: 0.3em;
-  line-height: 0.2em;
-  margin: 4px 8px 8px 8px;
-  padding: 5px;
-  text-align: center;
-  vertical-align: middle;
+#msg_power_1 {
+  font-weight: 600;
+  font-size: 9pt;
+  color: rgba(0, 0, 0, 0.623);
+  margin: 0 0.5em;
+  padding: 0;
 }
 
-input[type="checkbox"]:checked + label span::after {
-  font-size: 19px;
-  content: "\2713";
-  margin-left: -0.2em;
+input[type=range] {
+  -webkit-appearance: none;
+  width: 354px;
+  background-color: white;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 72px;
+  border-radius: 8px;
+  background: lightblue;
+  cursor: pointer;
+  margin-top: -6px;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100px;
+  height: 8.4px;
+  cursor: pointer;
+  background: #2c93b3;
+  border-radius: 6px;
+}
+
+#textMileage {
+  display: none;
+  margin-top: 4px;
+  margin-left: 54px;
+  font-size: 9pt;
+}
+
+#selMileage {
+  font-size: 9pt;
+  margin: 0 5px;
 }
 /*# sourceMappingURL=style.css.map */
