--- a/ex-2/assets/styles/style.scss
+++ b/ex-2/assets/styles/style.scss
@@ -8,6 +8,7 @@ body {
     margin: $center;
     padding: 0;
     background-color: rgba(136, 178, 197, 0.24);
+    font-family: $fontText;
 
 }
 
@@ -53,7 +54,7 @@ main {
     &_img {
         width: 100%;
     }
-    &_inputText {
+    &_choice {
         font-family: $fontText;
         border: none;
         border-top-right-radius: 4px;
@@ -70,6 +71,7 @@ main {
     }
     &_btn {
         border: none;
+        border-radius: 6px;
         margin-top: 1em;
         padding: 0.5em 5.8em;
         font-family: $fontHeading;
@@ -78,31 +80,93 @@ main {
     &_btn:hover {
         background-color: rgba(236, 81, 81, 0.623);
     }
+    &_msg {
+        padding: 5px 0;
+        font-size: 9pt;
+        font-weight: 700;
+        color: rgba(197, 4, 4, 0.623);
+    }
+    &_power {
+        width: 18em;
+    }
+    &_power_btn {
+        margin-left: 0.8em;
+        width: 6em;
+        border-radius: 4px;
+        border: none;
+    }
+    &_range {
+        background-color: #fff;
+        border-radius: 4px;
+    }
+    &_input_range {
+        width: 263px;
+        padding: 17px 30px;
+    }
 }
 
-input[type="checkbox"]{
+#model-mazda,
+#model-peugeot,
+#model-hyundai,
+#model-kia,
+#model-toyota,
+#msg_brand,
+#msg_model,
+#msg_year,
+#msg_kpp,
+#msg_engine,
+#msg_wheel,
+#msg_power_0,
+#msg_power_2,
+#msg_power_3 {
     display: none;
 }
 
-input[type="checkbox"] {
-    margin-left: 10px;
+#msg_power_0 {
+    color: rgba(0, 0, 0, 0.623);
+    font-size: 9pt;
 }
 
-input[type="checkbox"] + label span{
-    border: 1px solid rgb(99, 99, 99);
-    font-size: 12pt;
-    display: inline-block;
-    width: 0.3em;
-    height: 0.3em;
-    line-height: 0.2em;
-    margin: 4px 8px 8px 8px;
-    padding: 5px;
-    text-align: center;
-    vertical-align: middle;
-}
-input[type="checkbox"]:checked + label span::after{
-    font-size: 19px;
-    content: "\2713";
-    margin-left: -0.2em;
+#msg_power_1 {
+    font-weight: 600;
+    font-size: 9pt;
+    color: rgba(0, 0, 0, 0.623);
+    margin: 0 0.5em;
+    padding: 0;
 }
 
+input[type=range] {
+    -webkit-appearance: none; 
+    width: 354px;
+    background-color: rgb(255, 255, 255); 
+}
+
+input[type=range]::-webkit-slider-thumb {
+-webkit-appearance: none;
+height: 20px;
+width: 72px;
+border-radius: 8px;
+background:lightblue;
+cursor: pointer;
+margin-top: -6px; 
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+width: 100px;
+height: 8.4px;
+cursor: pointer;
+background: rgb(44, 147, 179);
+border-radius: 6px;
+}
+
+#textMileage {
+    display: none;
+    margin-top: 4px;
+    margin-left: 54px;
+    font-size: 9pt;
+}
+
+#selMileage {
+    font-size: 9pt;
+    margin: 0 5px;
+}
