--- a/ex-2/assets/styles/style.css
+++ b/ex-2/assets/styles/style.css
@@ -2,7 +2,6 @@
 body {
   margin: 0 auto;
   padding: 0;
-  background-color: rgba(136, 178, 197, 0.24);
   font-family: "Raleway", sans-serif;
 }
 
@@ -18,7 +17,7 @@ main {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  background-color: rgba(136, 178, 197, 0.493);
+  background-color: rgba(189, 154, 180, 0.295);
 }
 
 .form_heading {
@@ -27,164 +26,28 @@ main {
   text-align: center;
 }
 
-.form_center {
-  margin: 0 auto;
-  width: 30em;
-}
-
-.form_field {
-  padding: 0.6em 0;
-  margin-right: 0;
-}
-
-.form_label {
-  font-family: "Raleway", sans-serif;
-}
-
 .form_input {
+  width: 300px;
+  margin: 10px auto;
+  padding: 5px;
   margin-top: 0.3em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.form_imgBox {
-  width: 1.6em;
-  padding: 0.8em;
-  background-color: rgba(163, 161, 161, 0.767);
-  border-right: 1px solid rgba(68, 67, 67, 0.623);
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.form_img {
-  width: 100%;
-}
-
-.form_choice {
-  font-family: "Raleway", sans-serif;
-  border: none;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding-left: 1em;
-  width: 26em;
-}
-
-.form_check {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.form_labelCheck {
-  font-family: "Raleway", sans-serif;
-  font-size: 0.7em;
+  border: 1px solid rgba(197, 197, 197, 0.178);
+  border-radius: 4px;
 }
 
 .form_btn {
   border: none;
   border-radius: 6px;
-  margin-top: 1em;
-  padding: 0.5em 5.8em;
+  margin-top: 10px;
+  padding: 0.5em 4em;
   font-family: "Staatliches", sans-serif;
   font-size: 2em;
 }
 
-.form_btn:hover {
-  background-color: rgba(236, 81, 81, 0.623);
-}
-
-.form_msg {
-  padding: 5px 0;
-  font-size: 9pt;
-  font-weight: 700;
-  color: rgba(197, 4, 4, 0.623);
-}
-
-.form_power {
-  width: 18em;
-}
-
-.form_power_btn {
-  margin-left: 0.8em;
-  width: 6em;
-  border-radius: 4px;
-  border: none;
-}
-
-.form_range {
-  background-color: #fff;
-  border-radius: 4px;
-}
-
-.form_input_range {
-  width: 263px;
-  padding: 17px 30px;
-}
-
-#model-mazda,
-#model-peugeot,
-#model-hyundai,
-#model-kia,
-#model-toyota,
-#msg_brand,
-#msg_model,
-#msg_year,
-#msg_kpp,
-#msg_engine,
-#msg_wheel,
-#msg_power_0,
-#msg_power_2,
-#msg_power_3 {
-  display: none;
-}
-
-#msg_power_0 {
-  color: rgba(0, 0, 0, 0.623);
-  font-size: 9pt;
-}
-
-#msg_power_1 {
-  font-weight: 600;
-  font-size: 9pt;
-  color: rgba(0, 0, 0, 0.623);
-  margin: 0 0.5em;
-  padding: 0;
-}
-
-input[type=range] {
-  -webkit-appearance: none;
-  width: 354px;
-  background-color: white;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 20px;
-  width: 72px;
-  border-radius: 8px;
-  background: lightblue;
-  cursor: pointer;
-  margin-top: -6px;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100px;
-  height: 8.4px;
-  cursor: pointer;
-  background: #2c93b3;
-  border-radius: 6px;
-}
-
-#textMileage {
-  display: none;
-  margin-top: 4px;
-  margin-left: 54px;
-  font-size: 9pt;
-}
-
-#selMileage {
-  font-size: 9pt;
-  margin: 0 5px;
+#text {
+  height: 120px;
 }
 /*# sourceMappingURL=style.css.map */
