--- a/ex-1/styles/style.scss
+++ b/ex-1/styles/style.scss
@@ -1,4 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Open+Sans:wght@300;400&display=swap');
+
+$center: 0 auto;
+$heading: 'Montserrat', sans-serif;
+$text: 'Open Sans', sans-serif;
+
 body {
-    margin: 0 auto;
+    margin: $center;
     padding: 0;
+}
+
+.form {
+    margin: $center;
+    width: max-content;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+    box-shadow: 0 0 5px 1px rgba(128, 128, 128, 0.123);
+    border-radius: 4px;
+    padding: 2vw 3vw 14vw 3vw;
+    font-family: $text;
+    &_heading {
+        font-family: $heading;
+        font-weight: 300;
+
+    }
+    div {
+        display: flex;
+        flex-direction: column;
+    }
+    label {
+        margin: 3vw 0 0.5vw 0;
+        padding: 0.5vw;
+    }
+    input {
+        padding: 0.5vw;
+        border: none;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.329);
+        &:focus {
+            outline: none;
+        }
+    }
+    &_btn {
+        width: max-content;
+        float: right;
+        padding: 2vw 4vw;
+        margin-top: 3.5vw;
+        border: none;
+        border-radius: 4px;
+        background-color: rgb(147, 229, 219);
+        font-weight: 600;
+        text-transform: uppercase;
+        &:hover {
+            background-color: rgb(62, 228, 208);
+        }
+    }
+    &_div {
+        margin: $center;
+        width: max-content;
+        padding: 2vw;
+        font-family: $text;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.329);
+    }
 }
