--- a/ex-1/styles/style.css
+++ b/ex-1/styles/style.css
@@ -1,5 +1,78 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Open+Sans:wght@300;400&display=swap");
 body {
   margin: 0 auto;
   padding: 0;
+}
+
+.form {
+  margin: 0 auto;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-top: 3vw;
+  margin-bottom: 3vw;
+  -webkit-box-shadow: 0 0 5px 1px rgba(128, 128, 128, 0.123);
+          box-shadow: 0 0 5px 1px rgba(128, 128, 128, 0.123);
+  border-radius: 4px;
+  padding: 2vw 3vw 14vw 3vw;
+  font-family: "Open Sans", sans-serif;
+}
+
+.form_heading {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+}
+
+.form div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form label {
+  margin: 3vw 0 0.5vw 0;
+  padding: 0.5vw;
+}
+
+.form input {
+  padding: 0.5vw;
+  border: none;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.329);
+}
+
+.form input:focus {
+  outline: none;
+}
+
+.form_btn {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  float: right;
+  padding: 2vw 4vw;
+  margin-top: 3.5vw;
+  border: none;
+  border-radius: 4px;
+  background-color: #93e5db;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.form_btn:hover {
+  background-color: #3ee4d0;
+}
+
+.form_div {
+  margin: 0 auto;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 2vw;
+  font-family: "Open Sans", sans-serif;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.329);
 }
 /*# sourceMappingURL=style.css.map */
